// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OrganizationForm should render correct form with metadata 1`] = `
<DocumentFragment>
  <form
    id="form-organization"
  >
    <div>
      <div
        class="paneset  "
      >
        <section
          class="pane focusIndicator"
          data-test-form-vendor-pane="true"
          style="flex: 0 0 100%;"
        >
          <div
            aria-labelledby="paneHeader17-pane-title"
            class="paneHeader"
            data-test-pane-header="true"
            id="paneHeader17"
            tabindex="-1"
          >
            <div
              class="paneHeaderButtonsArea first"
            >
              <div
                class="paneMenu"
              >
                <button
                  aria-label="stripes-components.closeItem"
                  class="iconButton medium paneHeaderCloseIcon PaneHeaderIconButton paneHeaderIconButton"
                  data-test-pane-header-dismiss-button="true"
                  icon="times"
                  type="button"
                >
                  <span
                    class="iconButtonInner mediumOffset PaneHeaderIconButton__inner"
                    data-test-pane-header-dismiss-button="true"
                  >
                    <span>
                      Icon
                    </span>
                  </span>
                </button>
              </div>
            </div>
            <div
              class="paneHeaderCenter"
            >
              <div
                class="paneHeaderCenterInner"
                id="paneHeader17-pane-title"
              >
                <h2
                  class="paneTitle"
                  data-test-pane-header-title="true"
                >
                  <span
                    class="paneTitleLabel"
                  >
                    ui-organizations.createOrg.title
                  </span>
                </h2>
              </div>
            </div>
          </div>
          <div
            class="paneContent hasPadding"
            id="17-content"
            tabindex="-1"
          >
            <div
              class="row"
            >
              <div
                class="col-xs-12 col-md-8 col-md-offset-2"
              >
                <div
                  class="row end-xs"
                >
                  <div
                    class="col-xs-12"
                  >
                    <button
                      class="button link bottomMargin0"
                      data-tast-expand-button="true"
                      type="button"
                    >
                      <span
                        class="inner"
                      >
                        <strong>
                          stripes-components.expandAll
                        </strong>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="col-xs-12 col-md-8 col-md-offset-2"
              >
                <div
                  aria-multiselectable="true"
                >
                  <section
                    class="accordion hasSeparator"
                    data-test-accordion-section="true"
                    id="summarySection"
                  >
                    <div
                      class="headerWrapper"
                      tabindex="-1"
                    >
                      <div
                        class="header default"
                      >
                        <h3
                          class="headline size-medium margin-none font-weight-bold block"
                          data-test-headline="true"
                        >
                          <button
                            aria-controls="accordion40"
                            aria-expanded="true"
                            class="defaultCollapseButton"
                            id="accordion-toggle-button-summarySection"
                            type="button"
                          >
                            <span
                              class="headerInner"
                            >
                              <span
                                class="defaultHeaderIcon"
                              >
                                <span>
                                  Icon
                                </span>
                              </span>
                              <div
                                class="labelArea"
                              >
                                ui-organizations.summary
                              </div>
                            </span>
                          </button>
                        </h3>
                      </div>
                    </div>
                    <div
                      class="content-wrap expanded"
                      style="z-index: 1;"
                    >
                      <div
                        aria-labelledby="accordion-toggle-button-summarySection"
                        class="content-region expanded"
                        data-test-accordion-wrapper="true"
                        id="accordion40"
                        role="region"
                      >
                        <div>
                          ViewMetaData
                        </div>
                        OrganizationSummaryForm
                      </div>
                    </div>
                  </section>
                  <section
                    class="accordion hasSeparator"
                    data-test-accordion-section="true"
                    id="contactInformationSection"
                  >
                    <div
                      class="headerWrapper"
                      tabindex="-1"
                    >
                      <div
                        class="header default"
                      >
                        <h3
                          class="headline size-medium margin-none font-weight-bold block"
                          data-test-headline="true"
                        >
                          <button
                            aria-controls="accordion41"
                            aria-expanded="false"
                            class="defaultCollapseButton"
                            id="accordion-toggle-button-contactInformationSection"
                            type="button"
                          >
                            <span
                              class="headerInner"
                            >
                              <span
                                class="defaultHeaderIcon"
                              >
                                <span>
                                  Icon
                                </span>
                              </span>
                              <div
                                class="labelArea"
                              >
                                ui-organizations.contactInformation
                              </div>
                            </span>
                          </button>
                        </h3>
                      </div>
                    </div>
                    <div
                      class="content-wrap"
                      style="z-index: 1;"
                    >
                      <div
                        aria-labelledby="accordion-toggle-button-contactInformationSection"
                        class="content-region"
                        data-test-accordion-wrapper="true"
                        id="accordion41"
                        role="region"
                      >
                        OrganizationContactInfoFormContainer
                      </div>
                    </div>
                  </section>
                  <section
                    class="accordion hasSeparator"
                    data-test-accordion-section="true"
                    id="contactPeopleSection"
                  >
                    <div
                      class="headerWrapper"
                      tabindex="-1"
                    >
                      <div
                        class="header default"
                      >
                        <h3
                          class="headline size-medium margin-none font-weight-bold block"
                          data-test-headline="true"
                        >
                          <button
                            aria-controls="accordion42"
                            aria-expanded="false"
                            class="defaultCollapseButton"
                            id="accordion-toggle-button-contactPeopleSection"
                            type="button"
                          >
                            <span
                              class="headerInner"
                            >
                              <span
                                class="defaultHeaderIcon"
                              >
                                <span>
                                  Icon
                                </span>
                              </span>
                              <div
                                class="labelArea"
                              >
                                ui-organizations.contactPeople
                              </div>
                            </span>
                          </button>
                        </h3>
                      </div>
                    </div>
                    <div
                      class="content-wrap"
                      style="z-index: 1;"
                    >
                      <div
                        aria-labelledby="accordion-toggle-button-contactPeopleSection"
                        class="content-region"
                        data-test-accordion-wrapper="true"
                        id="accordion42"
                        role="region"
                      >
                        OrganizationContactPeopleForm
                      </div>
                    </div>
                  </section>
                  <section
                    class="accordion hasSeparator"
                    data-test-accordion-section="true"
                    id="interfacesSection"
                  >
                    <div
                      class="headerWrapper"
                      tabindex="-1"
                    >
                      <div
                        class="header default"
                      >
                        <h3
                          class="headline size-medium margin-none font-weight-bold block"
                          data-test-headline="true"
                        >
                          <button
                            aria-controls="accordion43"
                            aria-expanded="false"
                            class="defaultCollapseButton"
                            id="accordion-toggle-button-interfacesSection"
                            type="button"
                          >
                            <span
                              class="headerInner"
                            >
                              <span
                                class="defaultHeaderIcon"
                              >
                                <span>
                                  Icon
                                </span>
                              </span>
                              <div
                                class="labelArea"
                              >
                                ui-organizations.interface
                              </div>
                            </span>
                          </button>
                        </h3>
                      </div>
                    </div>
                    <div
                      class="content-wrap"
                      style="z-index: 1;"
                    >
                      <div
                        aria-labelledby="accordion-toggle-button-interfacesSection"
                        class="content-region"
                        data-test-accordion-wrapper="true"
                        id="accordion43"
                        role="region"
                      >
                        OrganizationInterfacesForm
                      </div>
                    </div>
                  </section>
                </div>
              </div>
            </div>
          </div>
          <div
            class="paneFooter"
          >
            <div
              class="paneFooterContent"
            >
              <span
                class="renderStart"
                data-test-pane-footer-start="true"
              >
                <button
                  class="button default mega"
                  data-test-cancel-button="true"
                  type="button"
                >
                  <span
                    class="inner"
                  >
                    stripes-acq-components.FormFooter.cancel
                  </span>
                </button>
              </span>
              <span
                data-test-pane-footer-end="true"
              >
                <button
                  class="button primary mega"
                  data-test-save-button="true"
                  disabled=""
                  id="organization-form-save"
                  type="submit"
                >
                  <span
                    class="inner"
                  >
                    ui-organizations.button.saveAndClose
                  </span>
                </button>
              </span>
            </div>
          </div>
        </section>
      </div>
      <div
        class="container"
      >
        <div
          class="cursorHover"
          hidden=""
          style="left: -10px;"
        >
          <div
            class="cursor"
          >
             
          </div>
        </div>
      </div>
    </div>
  </form>
  <div />
</DocumentFragment>
`;

exports[`OrganizationForm should render correct non-vendor form structure 1`] = `
<DocumentFragment>
  <form
    id="form-organization"
  >
    <div>
      <div
        class="paneset  "
      >
        <section
          class="pane focusIndicator"
          data-test-form-vendor-pane="true"
          style="flex: 0 0 100%;"
        >
          <div
            aria-labelledby="paneHeader1-pane-title"
            class="paneHeader"
            data-test-pane-header="true"
            id="paneHeader1"
            tabindex="-1"
          >
            <div
              class="paneHeaderButtonsArea first"
            >
              <div
                class="paneMenu"
              >
                <button
                  aria-label="stripes-components.closeItem"
                  class="iconButton medium paneHeaderCloseIcon PaneHeaderIconButton paneHeaderIconButton"
                  data-test-pane-header-dismiss-button="true"
                  icon="times"
                  type="button"
                >
                  <span
                    class="iconButtonInner mediumOffset PaneHeaderIconButton__inner"
                    data-test-pane-header-dismiss-button="true"
                  >
                    <span>
                      Icon
                    </span>
                  </span>
                </button>
              </div>
            </div>
            <div
              class="paneHeaderCenter"
            >
              <div
                class="paneHeaderCenterInner"
                id="paneHeader1-pane-title"
              >
                <h2
                  class="paneTitle"
                  data-test-pane-header-title="true"
                >
                  <span
                    class="paneTitleLabel"
                  >
                    ui-organizations.createOrg.title
                  </span>
                </h2>
              </div>
            </div>
          </div>
          <div
            class="paneContent hasPadding"
            id="1-content"
            tabindex="-1"
          >
            <div
              class="row"
            >
              <div
                class="col-xs-12 col-md-8 col-md-offset-2"
              >
                <div
                  class="row end-xs"
                >
                  <div
                    class="col-xs-12"
                  >
                    <button
                      class="button link bottomMargin0"
                      data-tast-expand-button="true"
                      type="button"
                    >
                      <span
                        class="inner"
                      >
                        <strong>
                          stripes-components.expandAll
                        </strong>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="col-xs-12 col-md-8 col-md-offset-2"
              >
                <div
                  aria-multiselectable="true"
                >
                  <section
                    class="accordion hasSeparator"
                    data-test-accordion-section="true"
                    id="summarySection"
                  >
                    <div
                      class="headerWrapper"
                      tabindex="-1"
                    >
                      <div
                        class="header default"
                      >
                        <h3
                          class="headline size-medium margin-none font-weight-bold block"
                          data-test-headline="true"
                        >
                          <button
                            aria-controls="accordion2"
                            aria-expanded="true"
                            class="defaultCollapseButton"
                            id="accordion-toggle-button-summarySection"
                            type="button"
                          >
                            <span
                              class="headerInner"
                            >
                              <span
                                class="defaultHeaderIcon"
                              >
                                <span>
                                  Icon
                                </span>
                              </span>
                              <div
                                class="labelArea"
                              >
                                ui-organizations.summary
                              </div>
                            </span>
                          </button>
                        </h3>
                      </div>
                    </div>
                    <div
                      class="content-wrap expanded"
                      style="z-index: 1;"
                    >
                      <div
                        aria-labelledby="accordion-toggle-button-summarySection"
                        class="content-region expanded"
                        data-test-accordion-wrapper="true"
                        id="accordion2"
                        role="region"
                      >
                        OrganizationSummaryForm
                      </div>
                    </div>
                  </section>
                  <section
                    class="accordion hasSeparator"
                    data-test-accordion-section="true"
                    id="contactInformationSection"
                  >
                    <div
                      class="headerWrapper"
                      tabindex="-1"
                    >
                      <div
                        class="header default"
                      >
                        <h3
                          class="headline size-medium margin-none font-weight-bold block"
                          data-test-headline="true"
                        >
                          <button
                            aria-controls="accordion3"
                            aria-expanded="false"
                            class="defaultCollapseButton"
                            id="accordion-toggle-button-contactInformationSection"
                            type="button"
                          >
                            <span
                              class="headerInner"
                            >
                              <span
                                class="defaultHeaderIcon"
                              >
                                <span>
                                  Icon
                                </span>
                              </span>
                              <div
                                class="labelArea"
                              >
                                ui-organizations.contactInformation
                              </div>
                            </span>
                          </button>
                        </h3>
                      </div>
                    </div>
                    <div
                      class="content-wrap"
                      style="z-index: 1;"
                    >
                      <div
                        aria-labelledby="accordion-toggle-button-contactInformationSection"
                        class="content-region"
                        data-test-accordion-wrapper="true"
                        id="accordion3"
                        role="region"
                      >
                        OrganizationContactInfoFormContainer
                      </div>
                    </div>
                  </section>
                  <section
                    class="accordion hasSeparator"
                    data-test-accordion-section="true"
                    id="contactPeopleSection"
                  >
                    <div
                      class="headerWrapper"
                      tabindex="-1"
                    >
                      <div
                        class="header default"
                      >
                        <h3
                          class="headline size-medium margin-none font-weight-bold block"
                          data-test-headline="true"
                        >
                          <button
                            aria-controls="accordion4"
                            aria-expanded="false"
                            class="defaultCollapseButton"
                            id="accordion-toggle-button-contactPeopleSection"
                            type="button"
                          >
                            <span
                              class="headerInner"
                            >
                              <span
                                class="defaultHeaderIcon"
                              >
                                <span>
                                  Icon
                                </span>
                              </span>
                              <div
                                class="labelArea"
                              >
                                ui-organizations.contactPeople
                              </div>
                            </span>
                          </button>
                        </h3>
                      </div>
                    </div>
                    <div
                      class="content-wrap"
                      style="z-index: 1;"
                    >
                      <div
                        aria-labelledby="accordion-toggle-button-contactPeopleSection"
                        class="content-region"
                        data-test-accordion-wrapper="true"
                        id="accordion4"
                        role="region"
                      >
                        OrganizationContactPeopleForm
                      </div>
                    </div>
                  </section>
                  <section
                    class="accordion hasSeparator"
                    data-test-accordion-section="true"
                    id="interfacesSection"
                  >
                    <div
                      class="headerWrapper"
                      tabindex="-1"
                    >
                      <div
                        class="header default"
                      >
                        <h3
                          class="headline size-medium margin-none font-weight-bold block"
                          data-test-headline="true"
                        >
                          <button
                            aria-controls="accordion5"
                            aria-expanded="false"
                            class="defaultCollapseButton"
                            id="accordion-toggle-button-interfacesSection"
                            type="button"
                          >
                            <span
                              class="headerInner"
                            >
                              <span
                                class="defaultHeaderIcon"
                              >
                                <span>
                                  Icon
                                </span>
                              </span>
                              <div
                                class="labelArea"
                              >
                                ui-organizations.interface
                              </div>
                            </span>
                          </button>
                        </h3>
                      </div>
                    </div>
                    <div
                      class="content-wrap"
                      style="z-index: 1;"
                    >
                      <div
                        aria-labelledby="accordion-toggle-button-interfacesSection"
                        class="content-region"
                        data-test-accordion-wrapper="true"
                        id="accordion5"
                        role="region"
                      >
                        OrganizationInterfacesForm
                      </div>
                    </div>
                  </section>
                </div>
              </div>
            </div>
          </div>
          <div
            class="paneFooter"
          >
            <div
              class="paneFooterContent"
            >
              <span
                class="renderStart"
                data-test-pane-footer-start="true"
              >
                <button
                  class="button default mega"
                  data-test-cancel-button="true"
                  type="button"
                >
                  <span
                    class="inner"
                  >
                    stripes-acq-components.FormFooter.cancel
                  </span>
                </button>
              </span>
              <span
                data-test-pane-footer-end="true"
              >
                <button
                  class="button primary mega"
                  data-test-save-button="true"
                  disabled=""
                  id="organization-form-save"
                  type="submit"
                >
                  <span
                    class="inner"
                  >
                    ui-organizations.button.saveAndClose
                  </span>
                </button>
              </span>
            </div>
          </div>
        </section>
      </div>
      <div
        class="container"
      >
        <div
          class="cursorHover"
          hidden=""
          style="left: -10px;"
        >
          <div
            class="cursor"
          >
             
          </div>
        </div>
      </div>
    </div>
  </form>
  <div />
</DocumentFragment>
`;

exports[`OrganizationForm should render correct vendor form structure 1`] = `
<DocumentFragment>
  <form
    id="form-organization"
  >
    <div>
      <div
        class="paneset  "
      >
        <section
          class="pane focusIndicator"
          data-test-form-vendor-pane="true"
          style="flex: 0 0 100%;"
        >
          <div
            aria-labelledby="paneHeader7-pane-title"
            class="paneHeader"
            data-test-pane-header="true"
            id="paneHeader7"
            tabindex="-1"
          >
            <div
              class="paneHeaderButtonsArea first"
            >
              <div
                class="paneMenu"
              >
                <button
                  aria-label="stripes-components.closeItem"
                  class="iconButton medium paneHeaderCloseIcon PaneHeaderIconButton paneHeaderIconButton"
                  data-test-pane-header-dismiss-button="true"
                  icon="times"
                  type="button"
                >
                  <span
                    class="iconButtonInner mediumOffset PaneHeaderIconButton__inner"
                    data-test-pane-header-dismiss-button="true"
                  >
                    <span>
                      Icon
                    </span>
                  </span>
                </button>
              </div>
            </div>
            <div
              class="paneHeaderCenter"
            >
              <div
                class="paneHeaderCenterInner"
                id="paneHeader7-pane-title"
              >
                <h2
                  class="paneTitle"
                  data-test-pane-header-title="true"
                >
                  <span
                    class="paneTitleLabel"
                  >
                    ui-organizations.createOrg.title
                  </span>
                </h2>
              </div>
            </div>
          </div>
          <div
            class="paneContent hasPadding"
            id="7-content"
            tabindex="-1"
          >
            <div
              class="row"
            >
              <div
                class="col-xs-12 col-md-8 col-md-offset-2"
              >
                <div
                  class="row end-xs"
                >
                  <div
                    class="col-xs-12"
                  >
                    <button
                      class="button link bottomMargin0"
                      data-tast-expand-button="true"
                      type="button"
                    >
                      <span
                        class="inner"
                      >
                        <strong>
                          stripes-components.expandAll
                        </strong>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="col-xs-12 col-md-8 col-md-offset-2"
              >
                <div
                  aria-multiselectable="true"
                >
                  <section
                    class="accordion hasSeparator"
                    data-test-accordion-section="true"
                    id="summarySection"
                  >
                    <div
                      class="headerWrapper"
                      tabindex="-1"
                    >
                      <div
                        class="header default"
                      >
                        <h3
                          class="headline size-medium margin-none font-weight-bold block"
                          data-test-headline="true"
                        >
                          <button
                            aria-controls="accordion15"
                            aria-expanded="true"
                            class="defaultCollapseButton"
                            id="accordion-toggle-button-summarySection"
                            type="button"
                          >
                            <span
                              class="headerInner"
                            >
                              <span
                                class="defaultHeaderIcon"
                              >
                                <span>
                                  Icon
                                </span>
                              </span>
                              <div
                                class="labelArea"
                              >
                                ui-organizations.summary
                              </div>
                            </span>
                          </button>
                        </h3>
                      </div>
                    </div>
                    <div
                      class="content-wrap expanded"
                      style="z-index: 1;"
                    >
                      <div
                        aria-labelledby="accordion-toggle-button-summarySection"
                        class="content-region expanded"
                        data-test-accordion-wrapper="true"
                        id="accordion15"
                        role="region"
                      >
                        OrganizationSummaryForm
                      </div>
                    </div>
                  </section>
                  <section
                    class="accordion hasSeparator"
                    data-test-accordion-section="true"
                    id="contactInformationSection"
                  >
                    <div
                      class="headerWrapper"
                      tabindex="-1"
                    >
                      <div
                        class="header default"
                      >
                        <h3
                          class="headline size-medium margin-none font-weight-bold block"
                          data-test-headline="true"
                        >
                          <button
                            aria-controls="accordion16"
                            aria-expanded="false"
                            class="defaultCollapseButton"
                            id="accordion-toggle-button-contactInformationSection"
                            type="button"
                          >
                            <span
                              class="headerInner"
                            >
                              <span
                                class="defaultHeaderIcon"
                              >
                                <span>
                                  Icon
                                </span>
                              </span>
                              <div
                                class="labelArea"
                              >
                                ui-organizations.contactInformation
                              </div>
                            </span>
                          </button>
                        </h3>
                      </div>
                    </div>
                    <div
                      class="content-wrap"
                      style="z-index: 1;"
                    >
                      <div
                        aria-labelledby="accordion-toggle-button-contactInformationSection"
                        class="content-region"
                        data-test-accordion-wrapper="true"
                        id="accordion16"
                        role="region"
                      >
                        OrganizationContactInfoFormContainer
                      </div>
                    </div>
                  </section>
                  <section
                    class="accordion hasSeparator"
                    data-test-accordion-section="true"
                    id="contactPeopleSection"
                  >
                    <div
                      class="headerWrapper"
                      tabindex="-1"
                    >
                      <div
                        class="header default"
                      >
                        <h3
                          class="headline size-medium margin-none font-weight-bold block"
                          data-test-headline="true"
                        >
                          <button
                            aria-controls="accordion17"
                            aria-expanded="false"
                            class="defaultCollapseButton"
                            id="accordion-toggle-button-contactPeopleSection"
                            type="button"
                          >
                            <span
                              class="headerInner"
                            >
                              <span
                                class="defaultHeaderIcon"
                              >
                                <span>
                                  Icon
                                </span>
                              </span>
                              <div
                                class="labelArea"
                              >
                                ui-organizations.contactPeople
                              </div>
                            </span>
                          </button>
                        </h3>
                      </div>
                    </div>
                    <div
                      class="content-wrap"
                      style="z-index: 1;"
                    >
                      <div
                        aria-labelledby="accordion-toggle-button-contactPeopleSection"
                        class="content-region"
                        data-test-accordion-wrapper="true"
                        id="accordion17"
                        role="region"
                      >
                        OrganizationContactPeopleForm
                      </div>
                    </div>
                  </section>
                  <section
                    class="accordion hasSeparator"
                    data-test-accordion-section="true"
                    id="interfacesSection"
                  >
                    <div
                      class="headerWrapper"
                      tabindex="-1"
                    >
                      <div
                        class="header default"
                      >
                        <h3
                          class="headline size-medium margin-none font-weight-bold block"
                          data-test-headline="true"
                        >
                          <button
                            aria-controls="accordion18"
                            aria-expanded="false"
                            class="defaultCollapseButton"
                            id="accordion-toggle-button-interfacesSection"
                            type="button"
                          >
                            <span
                              class="headerInner"
                            >
                              <span
                                class="defaultHeaderIcon"
                              >
                                <span>
                                  Icon
                                </span>
                              </span>
                              <div
                                class="labelArea"
                              >
                                ui-organizations.interface
                              </div>
                            </span>
                          </button>
                        </h3>
                      </div>
                    </div>
                    <div
                      class="content-wrap"
                      style="z-index: 1;"
                    >
                      <div
                        aria-labelledby="accordion-toggle-button-interfacesSection"
                        class="content-region"
                        data-test-accordion-wrapper="true"
                        id="accordion18"
                        role="region"
                      >
                        OrganizationInterfacesForm
                      </div>
                    </div>
                  </section>
                  <section
                    class="accordion hasSeparator"
                    data-test-accordion-section="true"
                    id="vendorInformationSection"
                  >
                    <div
                      class="headerWrapper"
                      tabindex="-1"
                    >
                      <div
                        class="header default"
                      >
                        <h3
                          class="headline size-medium margin-none font-weight-bold block"
                          data-test-headline="true"
                        >
                          <button
                            aria-controls="accordion19"
                            aria-expanded="false"
                            class="defaultCollapseButton"
                            id="accordion-toggle-button-vendorInformationSection"
                            type="button"
                          >
                            <span
                              class="headerInner"
                            >
                              <span
                                class="defaultHeaderIcon"
                              >
                                <span>
                                  Icon
                                </span>
                              </span>
                              <div
                                class="labelArea"
                              >
                                ui-organizations.vendorInformation
                              </div>
                            </span>
                          </button>
                        </h3>
                      </div>
                    </div>
                    <div
                      class="content-wrap"
                      style="z-index: 1;"
                    >
                      <div
                        aria-labelledby="accordion-toggle-button-vendorInformationSection"
                        class="content-region"
                        data-test-accordion-wrapper="true"
                        id="accordion19"
                        role="region"
                      >
                        OrganizationVendorInfoForm
                      </div>
                    </div>
                  </section>
                  <section
                    class="accordion hasSeparator"
                    data-test-accordion-section="true"
                    id="agreementsSection"
                  >
                    <div
                      class="headerWrapper"
                      tabindex="-1"
                    >
                      <div
                        class="header default"
                      >
                        <h3
                          class="headline size-medium margin-none font-weight-bold block"
                          data-test-headline="true"
                        >
                          <button
                            aria-controls="accordion20"
                            aria-expanded="false"
                            class="defaultCollapseButton"
                            id="accordion-toggle-button-agreementsSection"
                            type="button"
                          >
                            <span
                              class="headerInner"
                            >
                              <span
                                class="defaultHeaderIcon"
                              >
                                <span>
                                  Icon
                                </span>
                              </span>
                              <div
                                class="labelArea"
                              >
                                ui-organizations.vendorTerms
                              </div>
                            </span>
                          </button>
                        </h3>
                      </div>
                    </div>
                    <div
                      class="content-wrap"
                      style="z-index: 1;"
                    >
                      <div
                        aria-labelledby="accordion-toggle-button-agreementsSection"
                        class="content-region"
                        data-test-accordion-wrapper="true"
                        id="accordion20"
                        role="region"
                      >
                        OrganizationAgreementsForm
                      </div>
                    </div>
                  </section>
                  <section
                    class="accordion hasSeparator"
                    data-test-accordion-section="true"
                    id="EDIInformationSection"
                  >
                    <div
                      class="headerWrapper"
                      tabindex="-1"
                    >
                      <div
                        class="header default"
                      >
                        <h3
                          class="headline size-medium margin-none font-weight-bold block"
                          data-test-headline="true"
                        >
                          <button
                            aria-controls="accordion21"
                            aria-expanded="false"
                            class="defaultCollapseButton"
                            id="accordion-toggle-button-EDIInformationSection"
                            type="button"
                          >
                            <span
                              class="headerInner"
                            >
                              <span
                                class="defaultHeaderIcon"
                              >
                                <span>
                                  Icon
                                </span>
                              </span>
                              <div
                                class="labelArea"
                              >
                                ui-organizations.ediInformation
                              </div>
                            </span>
                          </button>
                        </h3>
                      </div>
                    </div>
                    <div
                      class="content-wrap"
                      style="z-index: 1;"
                    >
                      <div
                        aria-labelledby="accordion-toggle-button-EDIInformationSection"
                        class="content-region"
                        data-test-accordion-wrapper="true"
                        id="accordion21"
                        role="region"
                      >
                        OrganizationEDIInfoForm
                      </div>
                    </div>
                  </section>
                  <section
                    class="accordion hasSeparator"
                    data-test-accordion-section="true"
                    id="accountsSection"
                  >
                    <div
                      class="headerWrapper"
                      tabindex="-1"
                    >
                      <div
                        class="header default"
                      >
                        <h3
                          class="headline size-medium margin-none font-weight-bold block"
                          data-test-headline="true"
                        >
                          <button
                            aria-controls="accordion22"
                            aria-expanded="false"
                            class="defaultCollapseButton"
                            id="accordion-toggle-button-accountsSection"
                            type="button"
                          >
                            <span
                              class="headerInner"
                            >
                              <span
                                class="defaultHeaderIcon"
                              >
                                <span>
                                  Icon
                                </span>
                              </span>
                              <div
                                class="labelArea"
                              >
                                ui-organizations.accounts
                              </div>
                            </span>
                          </button>
                        </h3>
                      </div>
                    </div>
                    <div
                      class="content-wrap"
                      style="z-index: 1;"
                    >
                      <div
                        aria-labelledby="accordion-toggle-button-accountsSection"
                        class="content-region"
                        data-test-accordion-wrapper="true"
                        id="accordion22"
                        role="region"
                      >
                        OrganizationAccountsForm
                      </div>
                    </div>
                  </section>
                </div>
              </div>
            </div>
          </div>
          <div
            class="paneFooter"
          >
            <div
              class="paneFooterContent"
            >
              <span
                class="renderStart"
                data-test-pane-footer-start="true"
              >
                <button
                  class="button default mega"
                  data-test-cancel-button="true"
                  type="button"
                >
                  <span
                    class="inner"
                  >
                    stripes-acq-components.FormFooter.cancel
                  </span>
                </button>
              </span>
              <span
                data-test-pane-footer-end="true"
              >
                <button
                  class="button primary mega"
                  data-test-save-button="true"
                  disabled=""
                  id="organization-form-save"
                  type="submit"
                >
                  <span
                    class="inner"
                  >
                    ui-organizations.button.saveAndClose
                  </span>
                </button>
              </span>
            </div>
          </div>
        </section>
      </div>
      <div
        class="container"
      >
        <div
          class="cursorHover"
          hidden=""
          style="left: -10px;"
        >
          <div
            class="cursor"
          >
             
          </div>
        </div>
      </div>
    </div>
  </form>
  <div />
</DocumentFragment>
`;
